testsuite/lab2-testsuite/good/ass_var_to_var.cc
int main() {
  let int x = 0;
  let int y = x;
  return 0;
}
