testsuite/lab2-testsuite/bad/cmp_ass_bool_or_int.cc
int main () {
  let int x = false || 45;
  return 0;
}
